results/classifier/zero-shot/105/device/2314
device: 0.873
graphic: 0.768
network: 0.686
vnc: 0.678
instruction: 0.676
semantic: 0.656
socket: 0.617
boot: 0.494
mistranslation: 0.258
assembly: 0.184
other: 0.105
KVM: 0.098

Building QEMU 9.0.0 fails on MacOS 10.15.7 (error: initializing 'NSEdgeInsets' (aka 'struct NSEdgeInsets') with an expression of incompatible type 'id')
Description of problem:
QEMU fails to compile using Homebrew on OS X 10.15.7:
```
../ui/cocoa.m:542:18: error: initializing 'NSEdgeInsets' (aka 'struct NSEdgeInsets') with an expression of incompatible type 'id'
    NSEdgeInsets insets = [[[self window] screen] safeAreaInsets];
                 ^        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
```
Steps to reproduce:
1. Compile QEMU on OS X 10.15.7 using Homebrew
2.
3.
Additional information:
Build log
[02.make.zip](/uploads/dfb618b86984ed6cf699d94bf9d6c9e1/02.make.zip)
